Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2274

Race when tombstoned replica gets copied and becomes leader

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.6.0
    • 1.7.0
    • consensus
    • None

    Description

      It appears that there is a race where there can be an interleaving when writing to consensus metadata between a tombstoned TabletReplica instance and a newly tablet copied TabletReplica instance. This bug stems from not calling tablet_replica_->Shutdown() on the tombstoned replica when replacing such a replica.

      Attachments

        Activity

          People

            mpercy Mike Percy
            mpercy Mike Percy
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: